--- a/AULA_01/estilo.css
+++ b/AULA_01/estilo.css
@@ -1,6 +1,30 @@
+*{
+    margin:0;
+    padding:0;
+    }
 header{
     text-align: center;
     background-color: black;
     color:chartreuse;
-
+    height: 100px;
+    border-radius: 5;
+}
+nav{
+    background-color: black;
+    padding: 15px;
+}
+nav ul{
+    align-items: center;
+}
+nav ul li a{
+    color: azure;
+    font-size: 16px;
+    border-radius: 25;
+    text-decoration:none;
+}
+nav ul li a:hover{
+    color: chartreuse;
+    font-size: 20px;
+    border-radius: 25;
+    text-decoration:none;
 }
