--- a/AULA_01/estilo.css
+++ b/AULA_01/estilo.css
@@ -31,7 +31,7 @@ nav ul li a:hover{
     text-decoration:none;
 }
 body {
-    background-color: black;
+    background-color: rgb(83, 83, 83);
     color: aliceblue;
     font-size: 20px;
 
@@ -63,6 +63,7 @@ margin-top: 280px;
     align-items: center;
 }
 .footer {
+    
     margin-left: 500px;
     height:50px;
 
