--- a/AULA_02/estilo.css
+++ b/AULA_02/estilo.css
@@ -1,8 +1,27 @@
+@charset "UTF-8";
+
 * {
 font-family: Arial, Helvetica, sans-serif;
 font-weight: bold;
 font-size: 1.2rem;
-color:rgb(0, 0, 0);
+color:rgb(43, 255, 23);
 margin: 10;
 padding: 10px;
+}
+.calculatorButtons{
+    width: 4rem;
+    height: 3rem;
+    border: none;
+    margin: 0.3rem;
+    border-radius: 20rem;
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0 4px rgb(86, 87, 87);
+    text-align: center;
+}
+.calculatorButtons:active{
+    transform: translateY(1.2vh);
+    box-shadow: 0 2px rgb(86, 87, 87);
+    background-color: rgb(43, 255, 23);
+    color:rgb(0, 0, 0);
+
 }
