--- a/AULA_02/estilo.css
+++ b/AULA_02/estilo.css
@@ -7,7 +7,7 @@ font-weight: 700;
 font-style: normal;
 font-size: 1.2rem;
 color:rgb(43, 255, 23);
-margin: 10;
+margin: 10px;
 padding: 10px;
 }
 .calculatorButtons{
@@ -15,22 +15,22 @@ padding: 10px;
     height: 3rem;
     border: none;
     margin: 0.3rem;
-    border-radius: 50rem;
+    border-radius: 10rem;
     background-color: rgb(0, 0, 0);
-    box-shadow: 0 4px rgb(86, 87, 87);
+    box-shadow: 0 4px rgb(70, 69, 69);
     text-align: center;
 }
 .calculatorButtons:active{
     transform: translateY(0.7vh);
-    box-shadow: 0px 2px 1px rgb(87, 86, 86);
+    box-shadow: 0px 2px 1px rgb(70, 69, 69);
     background-color: rgb(43, 255, 23);
     color:rgb(0, 0, 0);
 }
 #display{
     background-color: rgb(0, 0, 0);
-    box-shadow: 0 2px rgb(86, 87, 87);
-    padding: 13px;
-    border-radius: 50rem;
+    box-shadow: 0 2px rgb(70, 69, 69);
+    padding: 15px;
+    border-radius: 10rem;
     text-align: right;
     height: 5vh;
     margin: 0.5rem;
@@ -40,6 +40,7 @@ body {
     padding: 0;
     background-image: linear-gradient(to left, #000000, #5a5a5a, #202020);
     background-size: cover;
+    
 }
 .container{
     background-image: linear-gradient(to left, #000000, #5a5a5a,#202020);
@@ -48,22 +49,29 @@ body {
     display: flex;
     background-size: cover;
     align-items: center;
+    height: auto;
 }.calculator{
     background-image: linear-gradient(to left, #000000, #5a5a5a,#202020);
     padding: 3vh 3vh 3vh 3vh;
-    border-radius: 1rem;
+    border-radius: 5rem;
     box-shadow: 0 10px 10px 0 rgb(0, 0, 0);
-    height: 70vh;
+    height: auto;
 }
-#cleanDispla, #deleteDigit. #division, #mutiplication, #subtraction, #sum, #result{
+#cleanDisplay, #deleteDigit, #division, #mutiplication, #subtraction, #sum, #result, #point{
     background-color:linear-gradient(to left, #000000, #5a5a5a,#202020);
-    color: #202020
+    color: #ff0026
+}
+#cleanDisplay:active, #deleteDigit:active, #division:active, #mutiplication:active, #subtraction:active, #sum:active, #result:active, #point:active {
+    transform: translateY(0.7vh);
+    box-shadow: 0px 2px 1px rgb(87, 86, 86);
+    background-color: #ff0026;
+    color:rgb(255, 255, 255);
 }
 #result{
-    height: 6.8rem;
+    height: 8rem;
 }
 #num0{
-    width: 8.7rem;
+    width: 10rem;
 }
 
 
