--- a/AULA_02/estilo.css
+++ b/AULA_02/estilo.css
@@ -4,16 +4,16 @@
 {
 font-family: "Poppins", sans-serif;
 font-weight: 700;
-font-style: normal;
+font-style: bold;
 font-size: 1.2rem;
 color:rgb(43, 255, 23);
 margin: 10px;
 padding: 10px;
 }
 .calculatorButtons{
-    width: 4rem;
-    height: 3rem;
-    border: none;
+    width: 4.1rem;
+    height: 3.1rem;
+    border: 0.1rem;
     margin: 0.3rem;
     border-radius: 10rem;
     background-color: rgb(0, 0, 0);
@@ -26,11 +26,18 @@ padding: 10px;
     background-color: rgb(43, 255, 23);
     color:rgb(0, 0, 0);
 }
+
+@font-face {
+    font-family: 'Digital-7';
+    src: url('fonts/digital-7.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #display{
-    font-family: "Poppins", sans-serif;
-    font-weight: 900;
-    font-style: bold;
-    font-size: 1.2rem;
+    font-family: 'Digital-7', sans-serif; 
+    font-size: 2.0rem;
+    color: rgb(43, 255, 23);
     background-color: rgb(0, 0, 0);
     box-shadow: 0 2px rgb(70, 69, 69);
     padding: 20px;
@@ -78,6 +85,7 @@ body {
 }
 #num0{
     width: 10rem;
+    height: 3.5rem;
 }
 
 
